--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -11,6 +11,8 @@
 }
 
 .after-main-links {
+    composes: width-limit from '../styles/application.module.css';
+
     margin: 40px;
     text-align: center;
 
