add missing padding for class 'results-count'

--- a/app/components/results-count.module.css
+++ b/app/components/results-count.module.css
@@ -2,6 +2,7 @@
     composes: small from '../styles/shared/typography.module.css';
 
     word-break: break-all;
+    padding-right: 20px;
 }
 
 .highlight {
