--- a/app/styles/crate/versions.module.css
+++ b/app/styles/crate/versions.module.css
@@ -11,6 +11,8 @@
 
 .page-description {
     composes: small from '../shared/typography.module.css';
+    word-break: break-all;
+    padding-right: 20px;
 
     @media only screen and (max-width: 550px) {
         display: block;
