--- a/app/components/results-count.module.css
+++ b/app/components/results-count.module.css
@@ -1,6 +1,6 @@
 .results-count {
     composes: small from '../styles/shared/typography.module.css';
-    word-break: break-all;
+    word-break: break-word;
     padding-right: 20px;
 }
 
