--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -1,19 +1,22 @@
 <footer local-class="footer">
   <div local-class='after-main-links'>
-    <a href='https://doc.rust-lang.org/cargo/'>Getting started</a>
-    <span local-class="sep">|</span>
-    <a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a>
-    <span local-class="sep">|</span>
-    <a href='mailto:help@crates.io'>Send us an email</a>
-    <span local-class="sep">|</span>
-    <a href='https://github.com/rust-lang/crates.io/issues/new/choose'>Report a general issue</a>
-    <span local-class="sep">|</span>
-    <a href='https://www.rust-lang.org/policies/security'>Report a security issue</a>
-    <span local-class="sep">|</span>
-    <a href='https://github.com/rust-lang/crates.io'>Fork on GitHub</a>
-    <span local-class="sep">|</span>
-    <a href='https://foundation.rust-lang.org/policies/privacy-policy/'>Privacy policy</a>
-    <span local-class="sep">|</span>
-    <LinkTo @route="policies">Policies</LinkTo>
+    <div>
+      <a href='https://doc.rust-lang.org/cargo/'>Getting started</a>
+      <span local-class="sep">|</span>
+      <a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a>
+      <span local-class="sep">|</span>
+      <a href='mailto:help@crates.io'>Send us an email</a>
+      <span local-class="sep">|</span>
+      <a href='https://www.rust-lang.org/policies/security'>Report a security issue</a>
+    </div>
+    <div>
+      <a href='https://github.com/rust-lang/crates.io'>Fork on GitHub</a>
+      <span local-class="sep">|</span>
+      <a href='https://github.com/rust-lang/crates.io/issues/new/choose'>Report a general issue</a>
+      <span local-class="sep">|</span>
+      <a href='https://foundation.rust-lang.org/policies/privacy-policy/'>Privacy policy</a>
+      <span local-class="sep">|</span>
+      <LinkTo @route="policies">Policies</LinkTo>
+    </div>
   </div>
 </footer>
