--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -13,26 +13,30 @@
 .after-main-links {
     composes: width-limit from '../styles/application.module.css';
 
-    margin: 40px;
-    text-align: center;
+    margin: 20px;
 
-    a { color: white; }
-    a:hover { color: darken(white, 10%); }
+    div {
+        margin: 10px 0;
+        text-align: center;
 
-    @media only screen and (max-width: 450px) {
-        margin: 20px;
-        .sep { display: none; }
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        a { color: white; }
+        a:hover { color: darken(white, 10%); }
 
-        a {
-            width: 50%;
-            font-size: 110%;
-            padding: 5px;
+        @media only screen and (max-width: 450px) {
+            margin: 20px;
+            .sep { display: none; }
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
-            &:not(:first-child) {
-                border-top: 1px solid var(--separator-color);
+            a {
+                width: 50%;
+                font-size: 110%;
+                padding: 5px;
+
+                &:not(:first-child) {
+                    border-top: 1px solid var(--separator-color);
+                }
             }
         }
     }
